--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
 
   <body>
     <section id="landing">
-        <nav>
             <div class="nav__container">
                 <img src="assets/Kat Lovewell - logo.png" alt="" class="logo">
-                <ul class="nav__links">
+                <ul class="nav__link--list">
                     <li class="nav__link">home.</li>
                     <li class="nav__link">services.</li>
                     <li class="nav__link">about.</li>
@@ -24,6 +23,5 @@
                     </li>
                 </ul>
             </div>
-        </nav>
     </section>
   </body>
