--- a/index.html
+++ b/index.html
@@ -23,5 +23,17 @@
                     </li>
                 </ul>
             </div>
+            <header class="header">
+                <div class="header__container">
+                    <div class="header__content">
+                        <h1>Join me on a journey to unlock deeper connections, self-love, and fulfilling relationships. Let's create a life filled with meaningful love and clarity.</h1>
+
+                    </div>
+                    <figure class="header__img--wrapper">
+                        <img src="assets/Kat headshot.jpg" alt="">
+                    </figure>
+                </div>
+            </header>
     </section>
   </body>
+
