--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <header class="header">
                 <div class="header__container">
-                    <div class="header__content">
+                    <div class="header__content brown">
                         <h1>Join me on a journey to unlock deeper connections, self-love, and fulfilling relationships. Let's create a life filled with meaningful love and clarity.</h1>
 
                     </div>
