Correcting colour palette

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <div class="nav__container">
                 <img src="assets/Kat Lovewell - logo.png" alt="" class="logo">
                 <ul class="nav__link--list">
-                    <li class="nav__link dark-pink">home.</li>
+                    <li class="nav__link nav__link--dark-pink">home.</li>
                     <li class="nav__link">services.</li>
                     <li class="nav__link">about.</li>
                     <li class="nav__link">reviews.</li>
