--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <header class="header">
                 <div class="header__container">
                     <div class="header__content brown">
-                        <h1>Join me on a journey to unlock deeper connections, self-love, and fulfilling relationships. Let's create a life filled with meaningful love and clarity.</h1>
-
+                        <h1>Join me on a journey to unlock deeper connections, self-love, and fulfilling relationships.</h1>
+                        <h2 class="dark-pink">Let's create a life filled with meaningful love and clarity.</h2>
                     </div>
                     <figure class="header__img--wrapper">
                         <img src="assets/Kat headshot.jpg" alt="">
