--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <div class="header__content brown">
                         <h1>Join me on a journey to unlock deeper connections, self-love, and fulfilling relationships.</h1>
                         <h2 class="dark-pink">Let's create a life filled with meaningful love and clarity.</h2>
+                        <button class="btn btn__contact--anchor btn__contact--hover-effect btn__contact--anchor-primary">SCHEDULE A SESSION</button>
                     </div>
                     <figure class="header__img--wrapper">
                         <img src="assets/Kat headshot.jpg" alt="">
