--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <header class="header">
                 <div class="header__container">
                     <div class="header__content brown">
-                        <h1>Join me on a journey to unlock deeper connections, self-love, and fulfilling relationships.</h1>
-                        <h2 class="dark-pink">Let's create a life filled with meaningful love and clarity.</h2>
+                        <h1>Join me on a journey to unlock fulfilling relationships.</h1>
+                        <h2 class="dark-pink">Maximize freedom and sense of connection, experience true love.</h2>
                         <button class="btn btn__contact--anchor btn__contact--hover-effect btn__contact--anchor-primary">SCHEDULE A SESSION</button>
                     </div>
                     <figure class="header__img--wrapper">
@@ -36,5 +36,15 @@
                 </div>
             </header>
     </section>
+    <section id="services">
+        <div class="container">
+            <div class="row">
+                <h1 class="section__title">
+
+                </h1>
+            </div>
+        </div>
+    </section>
+
   </body>
 
