--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <div class="header__content brown">
                         <h1 class="header__title">Join me on a journey to unlock fulfilling relationships.</h1>
                         <h2 class="header__subtitle dark-pink">Maximizing freedom and sense of connection, experiencing true love.</h2>
-                        <button class="btn btn__contact--anchor btn__contact--hover-effect btn__contact--anchor-primary">SCHEDULE A SESSION</button>
+                        <button class="btn btn__contact--anchor btn__contact--hover-effect btn__contact--anchor-primary">SCHEDULE  A SESSION</button>
                     </div>
                     <figure class="header__img--wrapper">
                         <img src="assets/Kat headshot square.jpg" alt="">
@@ -36,12 +36,44 @@
                 </div>
             </header>
     </section>
+    <section class="dtr-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="quote">“True Love is a trampoline for your dreams and a sanctuary for your soul.”</h2>
+                    <h3 class="quote__author">Annie Lala</h3>
+                </div>
+            </div>
+        </div>
+    </section>
     <section id="services">
         <div class="container">
             <div class="row">
-                <h1 class="section__title">
+                <h1 class="section__title text-center">I help individuals have extraoridinary relationships</h1>
+                <div class="sections">
+                    <div class="section__left">
+                        <figure class="section__img--wrapper">
+                            <img src="assets/happy couple - single.jpg" alt="">
+                        </figure>
+                        <h3 class="servicebox__title text-center">Singles who are done with dating & ready to find their partner</h3>
 
-                </h1>
+                    </div>
+                    <div class="section__right">
+                        <figure class="section__img--wrapper">
+                            <img src="assets/happy couple - conflict.jpg" alt="">
+                        </figure>
+                        <h3 class="servicebox__title text-center">Couples wanting to resolve conflicts that erode their connection</h3>
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="reviews">
+        <div class="container">
+            <div class="row">
+                <h1 class="section__title">What people say</h1>
             </div>
         </div>
     </section>
