--- a/index.html
+++ b/index.html
@@ -80,72 +80,51 @@
 
     
     <footer>
-        <div class="container">
-          <div class="footer__row">
-            <div class="footer__columns">
-              <div class="footer__column">
-                <div class="footer__column--title">MAIN</div>
-                <div class="footer__column--link">Blog</div>
-                <div class="footer__column--link">FAQs</div>
-                <div class="footer__column--link">Support</div>
-                <div class="footer__column--link">About Us</div>
-              </div>
-              <div class="footer__column">
-                <div class="footer__column--title">PRODUCT</div>
-                <div class="footer__column--link">Log In</div>
-                <div class="footer__column--link">Personal</div>
-                <div class="footer__column--link">Business</div>
-                <div class="footer__column--link">Team</div>
-              </div>
-              <div class="footer__column">
-                <div class="footer__column--title">PRESS</div>
-                <div class="footer__column--link">Logos</div>
-                <div class="footer__column--link">Events</div>
-                <div class="footer__column--link">Stories</div>
-                <div class="footer__column--link">Office</div>
-              </div>
-              <div class="footer__column">
-                <div class="footer__column--title">TEAM</div>
-                <div class="footer__column--link">Career</div>
-                <div class="footer__column--link">Founders</div>
-                <div class="footer__column--link">Culture</div>
-                <div class="footer__column--link">Onboarding</div>
-              </div>
-              <div class="footer__column">
-                <div class="footer__column--title">LEGAL</div>
-                <div class="footer__column--link">GDPR</div>
-                <div class="footer__column--link">Privacy Policy</div>
-                <div class="footer__column--link">Terms of Service</div>
-                <div class="footer__column--link">Disclaimer</div>
-              </div>
+        <div class="container footer__container">
+            <div class="row footer__row">
+
+            
+
+                <figure>
+                    <img class="footer__logo--img" src="assets/Kat Lovewell - logo.png">
+                </figure>
+                <div class="footer__social--list">
+                    <a href="#" class="
+                    footer__social--link
+                    link__hover-effect
+                    link__hover-effect--white">home.
+                    </a>
+                    <a href="#" class="
+                    footer__social--link
+                    link__hover-effect
+                    link__hover-effect--white">services.
+                    </a>
+                    <a href="#" onclick="toggleModal()" class="
+                    footer__social--link
+                    link__hover-effect
+                    link__hover-effect--white">about.
+                    </a>
+                    <a href="" class="
+                    footer__social--link
+                    link__hover-effect
+                    link__hover-effect--white">reviews.
+                    </a>
+                    <a href="" class="
+                    footer__social--link
+                    link__hover-effect
+                    link__hover-effect--white">blog.
+                    </a>
+                    <a href="" class="
+                    footer__social--link
+                    link__hover-effect
+                    link__hover-effect--white">contact.
+                    </a>
+                </div>
+                <div class="footer__copyright">Copyright © 2025 Kat Lovewell</div>
             </div>
-            <div class="footer__divider"></div>
-            <div class="footer__bottom">
-              <div class="footer__logo">
-                <img
-                  src="assets/Kat Lovewell - logo - white.png"
-                  class="footer__logo--image"
-                />
-                <div class="logo__text white">Kat Lovewell</div>
-              </div>
-              <div class="footer__copyright">
-                © 2025 Kat Lovewell. All Rights Reserved.
-              </div>
-              <div class="footer__socials">
-                <button class="social__link">
-                  <i class="fa-brands fa-facebook"></i>
-                </button>
-                <button class="social__link">
-                  <i class="fa-brands fa-twitter"></i>
-                </button>
-                <button class="social__link">
-                  <i class="fa-brands fa-youtube"></i>
-                </button>
-              </div>
-            </div>
-          </div>
+
         </div>
-      </footer>
+    </footer>
 
   </body>
 
