--- a/index.html
+++ b/index.html
@@ -70,6 +70,15 @@
             </div>
         </div>
     </section>
+
+    <section id="about">
+        <div class="container">
+            <div class="row">
+                <h1 class="section__title">Hi...I’m Kat Lovewell</h1>
+            </div>
+        </div>
+    </section>
+
     <section id="reviews">
         <div class="container">
             <div class="row">
@@ -90,34 +99,22 @@
                 </figure>
                 <div class="footer__social--list">
                     <a href="#" class="
-                    footer__social--link
-                    link__hover-effect
-                    link__hover-effect--white">home.
+                    footer__link">home.
                     </a>
-                    <a href="#" class="
-                    footer__social--link
-                    link__hover-effect
-                    link__hover-effect--white">services.
+                    <a href="#services" class="
+                    footer__link">services.
                     </a>
                     <a href="#" onclick="toggleModal()" class="
-                    footer__social--link
-                    link__hover-effect
-                    link__hover-effect--white">about.
+                    footer__link">about.
                     </a>
                     <a href="" class="
-                    footer__social--link
-                    link__hover-effect
-                    link__hover-effect--white">reviews.
+                    footer__link">reviews.
                     </a>
                     <a href="" class="
-                    footer__social--link
-                    link__hover-effect
-                    link__hover-effect--white">blog.
+                    footer__link">blog.
                     </a>
                     <a href="" class="
-                    footer__social--link
-                    link__hover-effect
-                    link__hover-effect--white">contact.
+                    footer__link">contact.
                     </a>
                 </div>
                 <div class="footer__copyright">Copyright © 2025 Kat Lovewell</div>
