--- a/index.html
+++ b/index.html
@@ -90,14 +90,12 @@
     
     <footer>
         <div class="container footer__container">
-            <div class="row footer__row">
-
-            
+            <div class="row footer__row">            
 
                 <figure>
                     <img class="footer__logo--img" src="assets/Kat Lovewell - logo.png">
                 </figure>
-                <div class="footer__social--list">
+                <div class="footer__list">
                     <a href="#" class="
                     footer__link">home.
                     </a>
