--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <section id="landing">
             <div class="nav__container">
-                <img src="assets/Kat Lovewell - logo.png" alt="" class="logo">
+                <img src="assets/Kat Lovewell - logo - black  - font.png" alt="" class="logo">
                 <ul class="nav__link--list">
                     <li class="nav__link nav__link--dark-pink">home.</li>
                     <li class="nav__link">services.</li>
