Update of the copy

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <header class="header">
                 <div class="header__container">
                     <div class="header__content brown">
-                        <h1 class="header__title">Join me on a journey to unlock fulfilling relationships.</h1>
-                        <h2 class="header__subtitle dark-pink">Maximizing freedom and sense of connection, experiencing true love.</h2>
+                        <h1 class="header__title">Turning conflict into extraoridinary connection in romantic relationships.</h1>
+                        <h2 class="header__subtitle dark-pink">Transforming your relationship into trampoline for your dreams and sanctuary for your heart.</h2>
                         <button class="btn btn__contact--anchor btn__contact--hover-effect btn__contact--anchor-primary">SCHEDULE  A SESSION</button>
                     </div>
                     <figure class="header__img--wrapper">
