Update of the page

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <div class="sections">
                     <div class="section__left">
                         <h1 class="section__title">Hi...I’m Kat Lovewell</h1>
-                        <p>I am a love and relationship coach (Heart Coach Relationship Certification by Annie Lala and VITA™ program).
+                        <p>I am a love and relationship coach (Heart Coach Relationship Certification by Annie Lala).
                             <br>
                             I use cutting edge relationship technologies to help people in the most effective and efficient way.
                             I am also an authentic relating expert and reiki master.
@@ -188,7 +188,7 @@
                     <a href="#" class="
                     footer__link">home.
                     </a>
-                    <a href="#services" class="
+                    <a href="#program-description" class="
                     footer__link">services.
                     </a>
                     <a href="#" onclick="toggleModal()" class="
