Update of the page

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                             I am also an authentic relating expert and reiki master.
                             I work privately with clients (in person and online) and lead workshops. 
                             <br>
-                            Washington, DC is my home.</p>
+                            Based in Washington, DC.</p>
                             <button class="btn btn__contact--anchor btn__contact--hover-effect btn__contact--anchor-primary">SCHEDULE  A SESSION</button>
                     </div>
                     <div class="section__right">
