--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                             I work privately with clients (in person and online) and lead workshops. 
                             <br>
                             Based in Washington, DC.</p>
-                            <button class="btn btn__contact--anchor btn__contact--hover-effect btn__contact--anchor-primary">SCHEDULE  A SESSION</button>
+                            <button class="btn btn__contact--anchor btn__contact--hover-effect btn__contact--anchor-primary" href="https://calendly.com/katlovewell/15min" target="_blank">SCHEDULE  A SESSION</button>
                     </div>
                     <div class="section__right">
                         <figure class="section__img--wrapper">
@@ -237,10 +237,10 @@
                     <a href="#" class="
                     footer__link">home.
                     </a>
-                    <a href="#program-description" class="
+                    <a href="program-description" class="
                     footer__link">services.
                     </a>
-                    <a href="#" onclick="toggleModal()" class="
+                    <a href="#about" onclick="toggleModal()" class="
                     footer__link">about.
                     </a>
                     <a href="" class="
