Button to calendly

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                             I work privately with clients (in person and online) and lead workshops. 
                             <br>
                             Based in Washington, DC.</p>
-                            <button class="btn btn__contact--anchor btn__contact--hover-effect btn__contact--anchor-primary" href="https://calendly.com/katlovewell/15min" target="_blank">SCHEDULE  A SESSION</button>
+                            <a class="btn btn__contact--anchor btn__contact--hover-effect btn__contact--anchor-primary" href="https://calendly.com/katlovewell/15min" target="_blank">SCHEDULE  A SESSION</a>
                     </div>
                     <div class="section__right">
                         <figure class="section__img--wrapper">
