--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <header class="header">
                 <div class="header__container">
                     <div class="header__content brown">
-                        <h1 class="header__title">Heartfelt Connections: Unlock the Love and Partnership You Deserve.</h1>
+                        <h1 class="header__title">Heartfelt Connections: Unlock the Love and Partnership You Desire.</h1>
                         <h2 class="header__subtitle dark-pink"></h2>
                 
                     </div>
@@ -177,7 +177,7 @@
                 <!-- Video 1 -->
                 <div class="video-wrapper">
                     <iframe 
-                        src="https://www.youtube.com/embed/example_video_id1" 
+                        src="https://youtube.com/shorts/wpwelrFiHb0" 
                         title="Testimonial Video 1" 
                         frameborder="0" 
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
@@ -197,6 +197,21 @@
                 </div>
     
                 <!-- Add more videos as needed -->
+            </div>
+        </div>
+    </section>
+
+    <section id="instagram-gallery" class="instagram-section">
+        <div class="container">
+            <h2 class="section__title text-center">Follow Me on Instagram</h2>
+            <p class="text-center">Stay inspired with daily insights, tips, and love-filled posts.</p>
+                <div class="text-center">
+                <a 
+                    href="https://www.instagram.com/katlovewell/" 
+                    target="_blank" 
+                    class="btn btn__instagram--anchor btn__instagram--hover-effect btn__instagram--anchor-primary">
+                    Follow Me on Instagram
+                </a>
             </div>
         </div>
     </section>
