--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <li class="nav__link">services.</li>
                     <li class="nav__link">about.</li>
                     <li class="nav__link">reviews.</li>
-                    <li class="nav__link">blog.</li>
+                    <!-- <li class="nav__link">blog.</li> -->
                     <li class="nav__link">contact.</li>
                     <li class="nav__link click">
                         <a href="https://www.instagram.com/katlovewell/">
@@ -184,7 +184,7 @@
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                         allowfullscreen>
                     </iframe>
-                    <p>"... it just kicks me into being able to speak my truth in much more simple, more loving, more compassionate way. It was a great program to go through and I would recommend it for anyone"- Mike".</p>
+                    <p>"... it just kicks me into being able to speak my truth in much more simple, more loving, more compassionate way. It was a great program to go through and I would recommend it for anyone." - Mike</p>
                 </div>
     
                 <!-- Video 2 -->
@@ -196,7 +196,7 @@
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                         allowfullscreen>
                     </iframe>
-                    <p>Hear how our program helped students achieve their goals and pursue their passions. This testimonial showcases the transformative impact of our education.</p>
+                    <p>"I was really amazed with the process of working with her. After the 1st session with Kat I was just amazed how quickly some of the tension and the challenges I was facing dissipated, honestly overnight. The process has been wonderful." - Kent</p>
                 </div>
     
                 <!-- Add more videos as needed -->
@@ -264,9 +264,9 @@
                     <a href="reviews" class="
                     footer__link">reviews.
                     </a>
-                    <a href="" class="
+                    <!-- <a href="" class="
                     footer__link">blog.
-                    </a>
+                    </a> -->
                     <a href="" class="
                     footer__link">contact.
                     </a>
