Making links work

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
                 <img src="assets/Kat Lovewell - logo - black  - font.png" alt="" class="logo">
                 <ul class="nav__link--list">
                     <li class="nav__link nav__link--dark-pink">home.</li>
-                    <li class="nav__link">services.</li>
-                    <li class="nav__link">about.</li>
-                    <li class="nav__link">reviews.</li>
+                    <a href="#program-description" class="nav__link">services.</a>
+                    <a href="#about" class="nav__link">about.</a>
+                    <a href="#reviews" class="nav__link">reviews.</a>
                     <!-- <li class="nav__link">blog.</li> -->
                     <li class="nav__link">contact.</li>
                     <li class="nav__link click">
@@ -255,13 +255,13 @@
                     <a href="#" class="
                     footer__link">home.
                     </a>
-                    <a href="program-description" class="
+                    <a href="#program-description" class="
                     footer__link">services.
                     </a>
                     <a href="#about" onclick="toggleModal()" class="
                     footer__link">about.
                     </a>
-                    <a href="reviews" class="
+                    <a href="#reviews" class="
                     footer__link">reviews.
                     </a>
                     <!-- <a href="" class="
