Correcting the text

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
             <header class="header">
                 <div class="header__container">
                     <div class="header__content brown">
-                        <h1 class="header__title">Unlock the Love and Partnership You Desire.</h1>
+                        <h1 class="header__title">Unlock the Love 
+                            <br> and Partnership You Desire.</h1>
                         <h2 class="header__subtitle dark-pink"></h2>
                 
                     </div>
@@ -51,7 +52,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h2 class="quote dark-pink">Transform your relationship into a trampoline for your dreams and a sanctuary for your heart.</h2>
+                    <h2 class="quote dark-pink">Transform your relationship into a trampoline for your dreams 
+                        <br> and a sanctuary for your heart.</h2>
                 </div>
             </div>
         </div>
