Correcting the buttons

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             <br>
                             Based on the principles of relational coaching from Annie Lala’s framework, this program is designed for those who want to finally break free from past patterns, communicate authentically, and build a relationship that’s fulfilling, connected, and long-lasting.
                             </p>
-                            <button class="btn btn__contact--anchor btn__contact--hover-effect btn__contact--anchor-primary">SCHEDULE  A SESSION</button>
+                            <a class="btn btn__contact--anchor btn__contact--hover-effect btn__contact--anchor-primary" href="https://calendly.com/katlovewell/15min" target="_blank">SCHEDULE  A SESSION</a>
                     </div>
                 </div>
                 
