--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         </a>
                     </li>
                     <li class="nav__icon click">
-                        <a href="www.youtube.com/@KatLovewell " target="_blank">
+                        <a href="https://www.youtube.com/@KatLovewell" target="_blank">
                             <i class="fa-brands fa-youtube"></i>
                         </a>
                     </li>
