--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="sections">
                     <div class="section__left">
                             <figure class="section__img--wrapper">
-                                <img src="assets/happy couple - single.jpg" />
+                                <img src="assets/happy couple - family.jpg" />
                             </figure>
 
                     </div>
