--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                     </li>
                   </ul>
             </div>
+          </div>
 
             <header class="header">
                 <div class="header__container">
@@ -290,7 +291,7 @@
     -webkit-transform: scale(1);
     transform-origin: 0 0;
     -webkit-transform-origin: 0 0;
-    height: ;
+   
     }
 
     .sr-only {
