footer social list

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
                     <a href="#reviews" class="nav__link">reviews.</a>
                     <!-- <li class="nav__link">blog.</li> -->
                     <li class="nav__link">contact.</li>
-                    <li class="nav__icon click">
+                    <ul class="social__list">
+                      <li class="nav__icon click">
                         <a href="https://www.instagram.com/katlovewell/" target="_blank">
                             <i class="fa-brands fa-instagram"></i>
                         </a>
@@ -31,6 +32,8 @@
                             <i class="fa-brands fa-youtube"></i>
                         </a>
                     </li>
+                    </ul>
+
                 </ul>
                 <button class="btn__menu" onclick="openMenu()">
                   <i class="fas fa-bars"></i>
@@ -1046,6 +1049,23 @@
                     footer__link">contact.
                     </a>
                 </div>
+                <ul class="social__list">
+                  <li class="footer__icon click">
+                    <a href="https://www.instagram.com/katlovewell/" target="_blank">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                </li>
+                <li class="footer__icon click">
+                    <a href="https://www.facebook.com/kasiamdeans/" target="_blank">
+                        <i class="fa-brands fa-facebook"></i>
+                    </a>
+                </li>
+                <li class="footer__icon click">
+                    <a href="https://www.youtube.com/@KatLovewell" target="_blank">
+                        <i class="fa-brands fa-youtube"></i>
+                    </a>
+                </li>
+                </ul>
                 <div class="footer__copyright">Copyright © 2025 Kat Lovewell</div>
             </div>
 
