--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <a href="#about" class="nav__link">about.</a>
                     <a href="#reviews" class="nav__link">reviews.</a>
                     <!-- <li class="nav__link">blog.</li> -->
-                    <li class="nav__link">contact.</li>
+                    <a href="mailto:hello@katlovewell.com?subject=Inquiry&body=Hello%20there,%20I%20would%20like%20to%20get%20in%20touch." class="nav__link">contact.</a>
                     <ul class="social__list">
                       <li class="nav__icon click">
                         <a href="https://www.instagram.com/katlovewell/" target="_blank">
